syntax = "proto3";

package rag;

enum RouteCategory {
    ClinicalTrials = 0;
    DRUG = 1;
    PUBMED_BIOXRIV_WEB = 2;
    NOT_SELECTED = 3;
}

message SearchRequest {
    string query = 1;
    RouteCategory route_category = 2;
}

message Metadata {
    string key = 1;
    string value = 2;
}

message Source {
    string url = 1;
    repeated Metadata metadata = 2;
}

message SearchResponse {
    int32 status = 1;
    string result = 2;
    repeated Source sources = 3;
}

service RagService {
    rpc search(SearchRequest) returns (SearchResponse);
}
